@@ -2,7 +2,8 @@
 -----
 1. Fix collapsed context-view selector buttons text when using a dark
    background.
-2. Apply some Fedora pataches.
+2. Apply some Fedora patches.
+3. Fix MPD HTTP stream playback.
 
 1.3.0.1
 -------
